--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-component": "^2.8.0",
+    "react-kakao-maps-sdk": "^1.1.21",
+    "styled-components": "^6.0.8",
     "typescript": "5.2.2"
   }
 }
