--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.21",
+    "styled-component": "^2.8.0",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
