--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.21",
-    "styled-components": "6.0.8"
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "typescript": "^5.2.2"
