--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "firebase": "10.4.0",
+    "install": "^0.13.0",
     "next": "13.4.19",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
